- fixed hidden expand/collapse checkboxes

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -1236,7 +1236,7 @@
 .charsheet .wrapper {
 	background-color: inherit;
 	border: 1px solid #000;
-	border-image-outset: 36 5 0 5;
+	border-image-outset: 36 0 0 0;
 	border-image-repeat: stretch;
 	border-image-slice: 64 0 70 0;
 	border-image-source: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Forbidden_Lands/images/FBL_wrapper_border.png);
@@ -1246,10 +1246,9 @@
 	font-family: "IM Fell English", "Times New Roman", Times, serif;
 	padding: 5.5em 0 4em 0;
 	position: absolute;
-	left: 1em;
+	left: .25em;
 	top: 10em;
-	width: 100vh;
-	min-width: 97%;
+	min-width: 878px;
 }
 
 .sheet-darkmode .tab-content .charsheet .wrapper {
@@ -1634,9 +1633,9 @@
 
 .charsheet .character-grid {
 	display: grid;
-	grid-column-gap: 2px;
+	grid-column-gap: 0;
 	grid-row-gap: 4px;
-	grid-template-columns: 34% auto auto;
+	grid-template-columns: 34% 1fr 1fr;
 	margin: -2.5em 0 0 0;
 }
 
@@ -1922,9 +1921,10 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 
 .charsheet .gear-grid button.roll-button-textonly.header-h1 {
 	margin: 0;
-	padding: 2px 0 2px 0;
-	width: 90%;
+	padding: 2px;
+	width: 75%;
 	width: -moz-available;
+	justify-self: center;
 }
 
 .charsheet .character-coins,
@@ -3658,6 +3658,14 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	max-width: calc(100% - 2px);
 }
 
+.charsheet .consumables-grid {
+	align-items: center;
+	display: grid;
+	grid-row-gap: 2px;
+	grid-template-columns: 3fr 1fr 2em 1fr;
+	margin-bottom: .5em;
+}
+
 .charsheet .gear-subgrid {
 	display: grid;
 	grid-column-gap: 2px;
@@ -3815,12 +3823,6 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 	max-height: 320px;
 	overflow-x: hidden;
 	padding: 2px 0 0 2px;
-}
-
-.charsheet .gear-box5 .repcontainer {
-	border-top: 2px solid #333;
-	margin-top: -1.1em;
-	padding-top: .5em;
 }
 
 .charsheet .mount-grid {
